<resources>
    <string name="app_name">androidproj1</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <array name="cities">
        <item>Marrakech</item>
        <item>Casa</item>
        <item>El Jadida</item>
    </array>
    <string name="gender">Gender</string>
    <array name="genders">
        <item>Male</item>
        <item>Female</item>
    </array>


</resources>